--- a/191665.html
+++ b/191665.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
 <title>Beyonce</title>
-<link rel="stylesheet" type="text/css" href="bootstrap-4.6.0-dist/bootstrap-4.6.0-dist/css/bootstrap.min.css">
-<script src="bootstrap-4.6.0-dist/bootstrap-4.6.0-dist/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <meta charset="UTF-8">
 <link rel="stylesheet" href="css/styles2.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -35,6 +34,8 @@
 </div>
 <div class="col-sm-4">
 <a href="index.html" role="button" class="btn btn-warning">Go back to home</a>
-</div>
+</div>  
+<script src="js/jquery-3.6.0.slim.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
